fix font & spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -19,8 +19,7 @@
   ::-webkit-scrollbar-thumb:hover {
     background: #000;
   }
-  font-size: 13px;
-  font-weight: 500;
+
   // background-color: gray;
 }
 body {
@@ -31,7 +30,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+span,
+a {
+  font-size: 13px;
+  font-weight: 500;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
