--- a/src/style/homeGallery.scss
+++ b/src/style/homeGallery.scss
@@ -38,7 +38,7 @@
       .sticky {
         position: sticky;
         display: inline-block;
-        top: 0px;
+        top: 15px;
         padding-bottom: 30px;
         // width: 19px;
         .num {
